--- a/src/main/webapp/resources/css/is_bundle.css
+++ b/src/main/webapp/resources/css/is_bundle.css
@@ -38,7 +38,7 @@ body.ja,body.ja label,body.ja input,body.ja textarea,body.ja select,body.ja butt
   font-style:normal
 }
 body.user-style-mouse208 {
-background-image: url(../images/bg.gif);
+background-image: url(../images/122102.jpg);
 }
 .wrapper,.wrapper-narrow,.wrapper-permalink {
   position:relative;
